--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         android:theme="@style/Theme.Project_Gemini"
         tools:targetApi="31" >
         <activity
+            android:name=".trialxmlact"
+            android:exported="false" />
+        <activity
             android:name=".CheckoutMenuAct"
             android:exported="false" />
         <activity
