--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -17,6 +17,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <uses-feature
         android:name="android.hardware.fingerprint"
@@ -31,7 +33,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_Gemini"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".composeact.MiniStoreAct"
+            android:exported="false"
+            android:label="@string/title_activity_mini_store"
+            android:theme="@style/Theme.Project_Gemini" />
+
         <activity
             android:name=".trialxmlact"
             android:exported="false" />
@@ -56,15 +64,7 @@
         <activity
             android:name=".HushhCoinsEarnedAct"
             android:exported="false" />
-        <activity
-            android:name=".AgentHomeAct"
-            android:exported="false" />
-        <activity
-            android:name=".Register_Agent_Act"
-            android:exported="false" />
-        <activity
-            android:name=".User_Agent_Act"
-            android:exported="false" />
+
         <activity
             android:name=".ShowHomeCardAct"
             android:exported="false" />
@@ -86,7 +86,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.project_gemini.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
@@ -106,7 +106,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
